syntax = "proto3";
package main;

import "firebase_rules_options.proto";

option (google.firebase.rules.firebase_rules).full_package_names = true;

message AccountPrivate {
  string id = 1;
  string student_account_id = 2;
  string xrp_seed = 3;
}
